--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
   "type": "propel-behavior",
   "extra": {
     "name": "event",
-    "class": "\\Spryker\\Zed\\Event\\Persistence\\Propel\\Behavior\\EventBehavior"
+    "class": "\\Spryker\\Zed\\EventBehavior\\Persistence\\Propel\\Behavior\\EventBehavior"
   }
 }
